Add Title to Recipe Pages

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipe</title>
 </head>
 <body>
     <h1>Lasagna</h1>
@@ -23,7 +23,7 @@
         <li>Hornear por unos 25 a 30 min</li>
         <li>Disfrutar la comida</li>
     </ol>
-    
+
     <a href="../index.html">Home</a>
 </body>
 </html>
